# Debuzz

./: .gitignore  README.md  pyproject.toml  substitute.js
debuzz/: __main__.py  api.py  app.py  buzz_detect.py  buzzwords.py  db.py  debuzzer.py
debuzz/static/: debuzz.crx  history.html  index.html  script.js  styles.css
debuzz/static/favicon/: site.webmanifest
extension/: background.js  content.js  manifest.json  popup.html  popup.js  styles.css
extention/: content.js  popup.html
